# log4cplus

./: CMakeLists.txt  clearBuild.sh  cmake_build.sh  combine_lib.sh  makefile  readme.txt  task.lua
include/: log.h
samples/: CMakeLists.txt  readme.txt
samples/combine/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  log.cpp
vs/: premake5.lua
